--- a/src/components/Movies/SearchForm/SearchForm.css
+++ b/src/components/Movies/SearchForm/SearchForm.css
@@ -1,34 +1,28 @@
 .search-form {
-  border-bottom: 1px solid #424242;
   background: #202020;
   padding-top: 70px;
-  padding-bottom: 70px;
-  padding-inline: 70px;
 }
 
 .search-form__container {
+  max-width: 1140px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 72px;
   border-radius: 9px;
   padding-right: 30px;
-  padding-left: 19px;
   background-color: #2f2f2f;
 }
 
 .search-form__film {
-  display: flex;
-  align-items: center;
-  width: 80%;
-  height: 40px;
-  border-right: 1px solid #505050;
+  padding-bottom: 70px;
+  border-bottom: 1px solid #424242;
 }
 
 .search-form__input {
   flex-grow: 1;
   border: none;
-  height: 25px;
+  height: 22px;
   margin-left: 10px;
   font-style: normal;
   font-weight: 400;
@@ -36,16 +30,17 @@
   line-height: 20px;
   background: #2f2f2f;
   padding: 0;
+  color: #8b8b8b;
 }
 
 .search-form__lupa {
   width: 35px;
   height: 35px;
+  margin-left: 19px;
 }
 
 .search-form__button {
   padding: 0;
-  cursor: pointer;
   background-image: url(../../../images/find.svg);
   background-repeat: no-repeat;
   background-position: center;
@@ -56,68 +51,72 @@
   border: none;
 }
 
+.search-form__border {
+  margin-right: 29px;
+  background: #424242;
+}
+
 @media screen and (max-width: 768px) {
-  .search-form__container {
-    padding-right: 20px;
+  .search-form {
+    padding-top: 80px;
   }
 
   .search-form__film {
-    width: 70%;
+    padding-bottom: 109px;
   }
 
-  .search-form {
-    padding-inline: 30px;
-    padding-top: 80px;
-    padding-bottom: 110px;
+  .search-form__container {
+    padding-right: 20px;
   }
 
   .search-form__button {
     margin-right: 19px;
   }
+
+  .search-form__border {
+    margin-right: 19px;
+    background: #505050;
+  }
 }
 
-@media screen and (max-width: 767px) {
-  .search-form {
-    height: 180px;
-  }
+@media screen and (max-width: 640px) {
   .search-form__container {
-    width: 95%;
-    display: flex;
-    gap: 66px;
-    flex-direction: column;
-  }
-
-  .search-form__film {
-    width: 100%;
-    margin-top: 19px;
-    border-right: none;
-  }
-
-  .search-form__lupa {
-    appearance: none;
-    position: absolute;
-    visibility: hidden;
+    padding: 0;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "input  button"
+      "checkbox checkbox";
+    row-gap: 65px;
+    position: relative;
+    padding-top: 19px;
+    height: 53px;
   }
 
   .search-form__input {
-    margin: 0;
+    margin-left: 19px;
     font-size: 14px;
     line-height: 20px;
+    grid-area: input;
+  }
+
+  .search-form__lupa {
+    display: none;
+  }
+
+  .search-form__border {
+    display: none;
   }
 
   .search-form__button {
-    margin-right: 0;
-  }
-}
-
-@media screen and (max-width: 450px) {
-  .search-form {
-    padding-inline: 14px;
+    grid-area: button;
+    margin-right: 19px;
   }
 
-  .search-form__container {
-    width: 87%;
-    gap: 60px;
+  .search-form__checkbox {
+    grid-area: checkbox;
+    position: absolute;
+    left: 0;
+    right: 0;
   }
-
 }
