--- a/src/components/Movies/MoviesCard/MoviesCard.css
+++ b/src/components/Movies/MoviesCard/MoviesCard.css
@@ -25,8 +25,6 @@
   line-height: 16px;
   color: #ffffff;
   margin: 16px 12px 17px 16px;
-  text-overflow: ellipsis;
-  overflow: hidden;
   grid-area: title;
 }
 
@@ -43,7 +41,7 @@
 }
 
 .movies__button-save {
-  background-image: url(../../../images/save-icon.svg);
+  background-image: url(../../../images/icon-save.svg);
   background-repeat: no-repeat;
   background-color: #222222;
   width: 30px;
