--- a/src/components/User/Login/Login.css
+++ b/src/components/User/Login/Login.css
@@ -1,20 +1,17 @@
 .login {
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   align-items: center;
   background: #202020;
   padding-block: 70px;
+  min-height: 100vh;
 }
 
 .login__main {
   width: 396px;
   display: flex;
   flex-direction: column;
-}
-
-.login__logo {
-  width: 38px;
-  height: 38px;
 }
 
 .login__title {
@@ -80,7 +77,7 @@
   text-align: center;
   color: #8b8b8b;
   margin: 0;
-  padding-block: 16px;
+  padding-top: 16px;
 }
 
 .login__link {
