--- a/src/components/User/Profile/Profile.css
+++ b/src/components/User/Profile/Profile.css
@@ -96,6 +96,33 @@
   transition: opacity 0.3s;
 }
 
+.profile__edit-status_ok {
+  color: #3456F3;
+}
+
+.profile__edit-status_error {
+  color: #FF3055;
+}
+
+.profile__save-button {
+  width: 100%;
+  margin: 169px 0 16px;
+  padding: 14px 0;
+  background: #3456F3;
+  color: white;
+  border: none;
+  border-radius: 3px;
+  font-size: 14px;
+  line-height: 17px;
+  font-weight: 500;
+}
+
+.profile__save-button_disabled {
+  background: #F9F9F9;
+  color: #A0A0A0;
+}
+
+
 @media (max-width: 768px) {
   .profile {
     padding-top: 236px;
