--- a/src/components/Main/AboutMe/AboutMe.css
+++ b/src/components/Main/AboutMe/AboutMe.css
@@ -59,6 +59,8 @@
   font-weight: 500;
   font-size: 14px;
   line-height: 17px;
+  text-decoration: none;
+  color: #ffffff;
 }
 
 .about-me__photo {
