--- a/src/components/Page404/Page404.css
+++ b/src/components/Page404/Page404.css
@@ -4,6 +4,8 @@
   align-items: center;
   background: #202020;
   color: #fff;
+  padding-bottom: 60px;
+  padding-top: 246px;
 }
 
 .page-404__title {
@@ -37,11 +39,13 @@
 }
 
 .page-404__link:hover {
-    opacity: 0.8;
-  }
+  opacity: 0.8;
+}
 
 @media (max-width: 767px) {
   .page-404 {
+    padding-top: 408px;
+    padding-bottom: 222px;
     font-size: 80px;
     line-height: 97px;
   }
@@ -61,5 +65,12 @@
     margin-top: 284px;
     font-size: 12px;
     line-height: 15px;
+  }
+}
+
+@media (max-width: 425px) {
+  .page-404 {
+    padding-top: 329px;
+    padding-bottom: 30px;
   }
 }
