--- a/src/components/User/Login/Login.css
+++ b/src/components/User/Login/Login.css
@@ -65,8 +65,14 @@
   color: #8b8b8b;
 }
 
-.login__input:focus {
-  outline-offset: 3px;
+
+.login__input-error {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 12px;
+  color: #ee3465;
+  margin-top: 6px;
 }
 
 .login__text {
@@ -100,6 +106,11 @@
   border-radius: 3px;
   background-color: #4285f4;
   outline: none;
+}
+
+.login__button_disabled {
+  background: #F9F9F9;
+  color: #A0A0A0;
 }
 
 @media (max-width: 768px) {
