--- a/src/components/common/NavigationProfile/NavigationProfile.css
+++ b/src/components/common/NavigationProfile/NavigationProfile.css
@@ -13,9 +13,27 @@
 }
 
 .navigation__link {
+  position: relative;
   text-decoration: none;
   color: #fff;
 }
+
+.navigation__link::after {
+	content: "";
+	position: absolute;
+	left: 0;
+	display: block;
+	width: 0;
+	height: 2px;
+	background-color: #fff;
+	transition: width 0.3s ease-out;
+}
+
+.navigation__link:hover::after,
+.navigation__link:focus::after {
+	width: 100%; 
+}
+
 
 .navigation__link_loggedin {
   margin-right: 20px;
@@ -119,12 +137,6 @@
     font-weight: 500;
   }
 
-  .navigation__link_active {
-    margin-bottom: 22px;
-    padding-bottom: 7px;
-    border-bottom: 2px solid #fff;
-  }
-
   .navigation__link-main {
     display: flex;
     margin-top: 105px;
@@ -153,10 +165,6 @@
 
   .navigation__link_loggedin {
     margin-bottom: 24px;
-  }
-
-  .navigation__link_active {
-    margin-bottom: 15px;
   }
 
   .navigation__link-main {
