--- a/src/components/Movies/SearchForm/SearchForm.css
+++ b/src/components/Movies/SearchForm/SearchForm.css
@@ -15,6 +15,7 @@
 }
 
 .search-form__film {
+  position: relative;
   padding-bottom: 70px;
   border-bottom: 1px solid #424242;
 }
@@ -24,6 +25,7 @@
   border: none;
   height: 22px;
   margin-left: 10px;
+  margin-right: 15px;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -31,6 +33,7 @@
   background: #2f2f2f;
   padding: 0;
   color: #8b8b8b;
+  cursor: pointer;
 }
 
 .search-form__lupa {
@@ -44,6 +47,7 @@
   background-image: url(../../../images/find.svg);
   background-repeat: no-repeat;
   background-position: center;
+  background-color: #4285f4;
   width: 34px;
   height: 34px;
   margin-right: 30px;
@@ -57,13 +61,15 @@
 }
 
 .search__error {
-  
+  position: absolute;
   left: 50%;
-  
+  bottom: 10px;
+  font-style: normal;
   font-weight: 400;
-  font-size: 13px;
+  font-size: 18px;
+  line-height: 20px;
   color: red;
-  
+  transform: translate(-50%, -50%);
 }
 
 @media screen and (max-width: 768px) {
@@ -86,6 +92,10 @@
   .search-form__border {
     margin-right: 19px;
     background: #505050;
+  }
+
+  .search__error {
+    bottom: 40px;
   }
 }
 
@@ -128,5 +138,17 @@
     position: absolute;
     left: 0;
     right: 0;
+  }
+
+  .search__error {
+    font-size: 10px;
+    line-height: 12px;
+    bottom: -30px;
+  }
+}
+
+@media screen and (max-width: 325px) {
+  .search__error {
+    left: 48%;
   }
 }
