--- a/src/components/common/Navigation/Navigation.css
+++ b/src/components/common/Navigation/Navigation.css
@@ -24,4 +24,29 @@
   color: #000;
 }
 
+.menu__account-button {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  margin-left: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  color: #fff;
+  width: 100px;
+  height: 32px;
+  border: 2px solid rgba(170, 170, 170, 0.2);
+  border-radius: 50px;
+}
 
+.menu__account-icon {
+  background-image: url(../../../images/logo-account.svg);
+  background-color: transparent;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 12px;
+  height: 14px;
+  margin-right: 7px;
+}
