--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -10,6 +10,8 @@
   -moz-text-size-adjust: 100%;
   text-rendering: optimizeLegibility;
   font-family: "Inter", Helvetica, Arial, sans-serif;
+  width: 100%;
+  height: 100%;
 }
 
 .content {
